# storage/api-docs/api-docs.json
@@ -287,6 +287,29 @@
                 }
             }
         },
+        "/shops/{shop}": {
+            "get": {
+                "tags": [
+                    "Shop"
+                ],
+                "summary": "飲食店情報取得",
+                "description": "飲食店情報を個別に取得する",
+                "operationId": "get-shop",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/shop-id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/get-shop-200"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/not-found"
+                    }
+                }
+            }
+        },
         "/sanctum/csrf-cookie": {
             "get": {
                 "tags": [
@@ -946,6 +969,21 @@
                     }
                 }
             },
+            "get-shop-200": {
+                "description": "飲食店情報取得成功",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/shop-data"
+                        },
+                        "examples": {
+                            "example": {
+                                "$ref": "#/components/examples/get-shop-200"
+                            }
+                        }
+                    }
+                }
+            },
             "get-customer-shop-reservations-200": {
                 "description": "飲食店詳細ページの予約一覧取得成功",
                 "content": {
@@ -1552,6 +1590,24 @@
                         }
                     ],
                     "data": []
+                }
+            },
+            "get-shop-200": {
+                "summary": "飲食店情報の例",
+                "value": {
+                    "id": 1,
+                    "name": "店舗1",
+                    "area": {
+                        "id": 1,
+                        "name": "東京都"
+                    },
+                    "genre": {
+                        "id": 1,
+                        "name": "和食"
+                    },
+                    "image_url": "https://api.rese.com/images/1.jpg",
+                    "detail": "サンプルテキスト",
+                    "favorite_status": "marked"
                 }
             },
             "get-customer-shop-reservations-200-example": {
